--- a/__site/404.html
+++ b/__site/404.html
@@ -27,7 +27,7 @@
     <a class="sidebar-nav-item " href="/menu3/">Tags</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; Septimia Zenobia.</p>
+    <p>&copy; MSC Lab.</p>
   </div>
 </div>
 
@@ -37,8 +37,8 @@ content to avoid any CSS collisions with our real content. -->
   <div class="masthead">
     <div class="container">
       <h3 class="masthead-title">
-        <a href="/" title="Home">Lanyon</a>
-        <small>Description of your site</small>
+        <a href="/" title="Home">転</a>
+        <small>Mathematical and Scientific Computing</small>
       </h3>
     </div>
   </div>
@@ -73,7 +73,7 @@ content to avoid any CSS collisions with our real content. -->
 
 <div class="page-foot">
   <div class="copyright">
-    &copy; Septimia Zenobia. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    &copy; MSC Lab. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
