--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -28,7 +28,7 @@
     <a class="sidebar-nav-item " href="/menu3/">Tags</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; Septimia Zenobia.</p>
+    <p>&copy; MSC Lab.</p>
   </div>
 </div>
 
@@ -111,7 +111,7 @@ end</code></pre> </p>
 <p>Using this approach with the <code>generate_results.jl</code> file also makes sure that all the code on your website works and that all results match the code which makes maintenance easier.</p>
 <div class="page-foot">
   <div class="copyright">
-    &copy; Septimia Zenobia. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    &copy; MSC Lab. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
