--- a/__site/menu2/index.html
+++ b/__site/menu2/index.html
@@ -28,7 +28,7 @@
     <a class="sidebar-nav-item " href="/menu3/">Tags</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; Septimia Zenobia.</p>
+    <p>&copy; MSC Lab.</p>
   </div>
 </div>
 
@@ -125,7 +125,7 @@ end</code></pre>
 <p><strong>Note</strong>: the output <strong>will be</strong> reprocessed by Franklin, if you want to avoid this, then escape the output by using <code>return &quot;~~~&quot; * s * &quot;~~~&quot;</code> and it will be plugged  in as is in the HTML.</p>
 <div class="page-foot">
   <div class="copyright">
-    &copy; Septimia Zenobia. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    &copy; MSC Lab. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
