--- a/__site/menu3/index.html
+++ b/__site/menu3/index.html
@@ -28,7 +28,7 @@
     <a class="sidebar-nav-item active" href="/menu3/">Tags</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; Septimia Zenobia.</p>
+    <p>&copy; MSC Lab.</p>
   </div>
 </div>
 
@@ -132,7 +132,7 @@ end</code></pre>
 &lt;li&gt;&lt;a href&#61;&quot;/&#36;rpath/&quot;&gt;&#36;title&lt;/a&gt;&lt;/li&gt;</code></pre>
 <div class="page-foot">
   <div class="copyright">
-    &copy; Septimia Zenobia. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    &copy; MSC Lab. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
