--- a/__site/404.html
+++ b/__site/404.html
@@ -37,8 +37,8 @@ content to avoid any CSS collisions with our real content. -->
   <div class="masthead">
     <div class="container">
       <h3 class="masthead-title">
-        <a href="/" title="Home">転</a>
-        <small>Mathematical and Scientific Computing</small>
+        <a href="/" title="Home">Lanyon</a>
+        <small>Description of your site</small>
       </h3>
     </div>
   </div>
