--- a/__site/index.html
+++ b/__site/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/css/adjust.css">
 <link rel="icon" href="/assets/favicon.png">
 
-   <title>Franklin Example</title>  
+   <title>Mathematical and Scientific Computing</title>  
 </head>
 <body>
 <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
