--- a/__site/404.html
+++ b/__site/404.html
@@ -18,7 +18,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>.</p>
+    <p>A scientific notion.</p>
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item " href="/">Home</a>
@@ -37,8 +37,8 @@ content to avoid any CSS collisions with our real content. -->
   <div class="masthead">
     <div class="container">
       <h3 class="masthead-title">
-        <a href="/" title="Home">Lanyon</a>
-        <small>Description of your site</small>
+        <a href="/" title="Home">流れ</a>
+        <small>Mathematical and Scientific Computing</small>
       </h3>
     </div>
   </div>
@@ -73,7 +73,7 @@ content to avoid any CSS collisions with our real content. -->
 
 <div class="page-foot">
   <div class="copyright">
-    &copy; MSC Lab. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    &copy; MSC Lab. Last modified: November 30, 2021.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
