--- a/__site/index.html
+++ b/__site/index.html
@@ -20,13 +20,14 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>.</p>
+    <p>A scientific notion.</p>
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item active" href="/">Home</a>
     <a class="sidebar-nav-item " href="/menu1/">Code blocks</a>
-    <a class="sidebar-nav-item " href="/menu2/">More goodies</a>
+    <a class="sidebar-nav-item " href="/menu2/">Blog</a>
     <a class="sidebar-nav-item " href="/menu3/">Tags</a>
+    <a class="sidebar-nav-item " href="/post/menu4/">Tags</a>
   </nav>
   <div class="sidebar-item">
     <p>&copy; MSC Lab.</p>
@@ -39,8 +40,8 @@ content to avoid any CSS collisions with our real content. -->
   <div class="masthead">
     <div class="container">
       <h3 class="masthead-title">
-        <a href="/" title="Home">Lanyon</a>
-        <small>Description of your site</small>
+        <a href="/" title="Home">流れ</a>
+        <small>Mathematical and Scientific Computing</small>
       </h3>
     </div>
   </div>
@@ -183,7 +184,7 @@ end</code></pre>
 <p>There&#39;s a few other such functions of the form <code>&#123;&#123;fname p₁ p₂&#125;&#125;</code> as well as support for conditional blocks. If you wander through the <code>src/_html_parts/</code> folder and its content, you should be able to see those in action.</p>
 <div class="page-foot">
   <div class="copyright">
-    &copy; MSC Lab. Last modified: November 30, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    &copy; MSC Lab. Last modified: November 30, 2021.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
