--- a/__site/menu4/index.html
+++ b/__site/menu4/index.html
@@ -19,16 +19,17 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A scientific notion.</p>
+    <p>A scientific notion</p>
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item " href="/">Home</a>
     <a class="sidebar-nav-item " href="/menu1/">Code blocks</a>
     <a class="sidebar-nav-item " href="/menu2/">More goodies</a>
     <a class="sidebar-nav-item " href="/menu3/">Tags</a>
+    <a class="sidebar-nav-item " href="/menu4/">Blog</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; MSC Lab.</p>
+    <p>&copy; MSC Lab</p>
   </div>
 </div>
 
@@ -132,7 +133,7 @@ end</code></pre>
 &lt;li&gt;&lt;a href&#61;&quot;/&#36;rpath/&quot;&gt;&#36;title&lt;/a&gt;&lt;/li&gt;</code></pre>
 <div class="page-foot">
   <div class="copyright">
-    &copy; MSC Lab. Last modified: November 30, 2021.
+    &copy; MSC Lab. Last modified: December 01, 2021.
   </div>
 </div>
 </div><!-- CONTENT ENDS HERE -->
