--- a/__site/menu2/index.html
+++ b/__site/menu2/index.html
@@ -19,16 +19,17 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>A scientific notion.</p>
+    <p>A scientific notion</p>
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item " href="/">Home</a>
     <a class="sidebar-nav-item " href="/menu1/">Code blocks</a>
     <a class="sidebar-nav-item active" href="/menu2/">More goodies</a>
     <a class="sidebar-nav-item " href="/menu3/">Tags</a>
+    <a class="sidebar-nav-item " href="/menu4/">Blog</a>
   </nav>
   <div class="sidebar-item">
-    <p>&copy; MSC Lab.</p>
+    <p>&copy; MSC Lab</p>
   </div>
 </div>
 
@@ -108,7 +109,7 @@ end</code></pre>
   var &#61; vname&#91;1&#93;
   return pagevar&#40;&quot;menu1&quot;, var&#41;
 end</code></pre>
-<p>Which you can use like this <code>&#123;&#123;m1fill title&#125;&#125;</code>: <strong>Mathematical and Scientific Computing</strong>. Of course  in this specific case you could also have used <code>&#123;&#123;fill title menu1&#125;&#125;</code>: <strong>Code blocks</strong>.</p>
+<p>Which you can use like this <code>&#123;&#123;m1fill title&#125;&#125;</code>: <strong>MSC</strong>. Of course  in this specific case you could also have used <code>&#123;&#123;fill title menu1&#125;&#125;</code>: <strong>Code blocks</strong>.</p>
 <p>Of course these examples are not very useful, in practice you might want to use it to generate actual HTML in a specific way using Julia code. For instance you can use it to customise how <a href="/menu3/#customising_tag_pages">tag pages look like</a>.</p>
 <p>A nice example of what you can do is in the <a href="https://juliasymbolics.github.io/SymbolicUtils.jl/api/">SymbolicUtils.jl manual</a> where they use a <code>hfun_</code> to generate HTML encapsulating the content of code docstrings, in a way doing something similar to what Documenter does. See <a href="https://github.com/JuliaSymbolics/SymbolicUtils.jl/blob/website/utils.jl">how they defined it</a>.</p>
 <p><strong>Note</strong>: the  output <strong>will not</strong> be reprocessed by Franklin, if you want to generate markdown which should be processed by Franklin, then use <code>return fd2html&#40;markdown, internal&#61;true&#41;</code> at the end.</p>
