--- a/__site/index.html
+++ b/__site/index.html
@@ -60,6 +60,13 @@ end
 len&#40;p::T&#41; where &#123;T &lt;: Point&#125; &#61; sqrt&#40;sum&#40;getfield&#40;p, η&#41;^2 for η ∈ fieldnames&#40;T&#41;&#41;&#41;</code></pre>
 <p>We talk about technology waves in English, German, and Mandarin.</p>
 <div class="colbox-blue">Here we go&#33;</div>
+
+<div class="row">
+  <div class="container">
+    <iframe src="https://open.spotify.com/embed/track/4N2qNs5FhQHZh4YtdIWy2v?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  </div>
+</div>
+
 <div class="page-foot">
   <div class="copyright">
     &copy; MSC Lab. Last modified: December 01, 2021.
